image generation done for debug calibration algorithm

--- a/central/debug.ipynb
+++ b/central/debug.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,98 +92,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1951 2032\n",
-      "2129 2177\n",
-      "2177 2207\n",
-      "2207 2238\n",
       "Done camera #1\n"
      ]
     }
    ],
    "source": [
     "os.system('del pics\\cam1\\*jpg')\n",
-    "invalid,counter,tol,swap,certainty=0,0,0.25,0,False\n",
-    "intervals=[]\n",
+    "invalid,lastValid,tol,swap,certainty,counter,lastValid_i=0,0,0.25,0,False,0,0\n",
+    "intervals,valid,jump=[],[],[]\n",
     "for i in range(0,df1.shape[0]):\n",
     "    # get points and check invalidity sequence\n",
     "    pts,imgNumb = df1[i][0:6].reshape(-1,2),int(df1[i][-1])\n",
-    "    if imgNumb>counter+1: invalid = imgNumb-counter\n",
+    "    if imgNumb>lastValid+1: invalid = imgNumb-lastValid\n",
     "    # order markers per proximity and check collinearity\n",
-    "    if isCollinear(*pts) or not isEqual(pts) or np.any(pts<0):     \n",
+    "    if isCollinear(*pts) and not isEqual(pts) or np.any(pts<0):     \n",
     "        if invalid>=10 or not counter: \n",
-    "            if not certainty and counter: print(intervals[-1],imgNumb)\n",
+    "            if not certainty and counter: valid[-1]=False\n",
     "            prev,certainty = [],False\n",
-    "            intervals.append(imgNumb)\n",
-    "        else: prev = np.array(df1[i-1][0:6]).reshape(1,-2)\n",
+    "            intervals.append(i)\n",
+    "            valid.append(True)\n",
+    "        else: prev = np.array(df1[lastValid_i][0:6]).reshape(1,-2)\n",
     "        pts, _ = orderCenterCoord(pts,prev)\n",
     "        pts = np.array(pts)\n",
     "    else: \n",
+    "        jump.append(imgNumb)\n",
     "        invalid+=1\n",
     "        continue\n",
     "    # update internal loop variables\n",
-    "    counter,invalid=imgNumb,0\n",
+    "    lastValid,invalid,lastValid_i=imgNumb,0,i\n",
+    "    counter+=1\n",
     "    df1[i][0:6] = np.copy(pts).reshape(-1,6)\n",
     "    # check if ABC is in order smaller to largest\n",
     "    # if 2 consecutive trues, invert all df until interval beginning\n",
-    "    for [A,B,C] in pts.reshape([-1, 3, 2]):\n",
-    "        if np.linalg.norm(C-B)/np.linalg.norm(A-B)>(2-tol) and np.linalg.norm(C-B)>20:\n",
-    "            swap += 1\n",
-    "            if swap>5: df1[intervals[-1]:i][0:2],df1[intervals[-1]:i][4:6],swap,certainty = df1[intervals[-1]:i][4:6],df1[intervals[-1]:i][0:2],0,True\n",
-    "        if np.linalg.norm(A-B)/np.linalg.norm(C-B)>(2-tol) and np.linalg.norm(A-B)>20: certainty = True\n",
-    "    # check if this flow has at least one flow certainty\n",
-    "    # check future\n",
+    "    if not certainty:\n",
+    "        for [A,B,C] in pts.reshape([-1, 3, 2]):\n",
+    "            if np.linalg.norm(C-B)/np.linalg.norm(A-B)>(2-tol) and np.linalg.norm(C-B)>20:\n",
+    "                swap += 1\n",
+    "                if swap>5: df1[intervals[-1]:i][0:2],df1[intervals[-1]:i][4:6],swap,certainty = df1[intervals[-1]:i][4:6],df1[intervals[-1]:i][0:2],0,True\n",
+    "            if np.linalg.norm(A-B)/np.linalg.norm(C-B)>(2-tol) and np.linalg.norm(A-B)>20: certainty = True\n",
+    "    #if not i%100: print(i)\n",
+    "intervals.append(i)\n",
+    "\n",
+    "for i in range(0,len(intervals)-1):\n",
+    "    if not valid[i]: continue\n",
+    "    beg,end = intervals[i],intervals[i+1]\n",
     "    ### VERBOSE\n",
-    "    img,k = np.ones((540,960,3))*255,0\n",
-    "    for k in range(0,3):\n",
-    "        pt = pts.reshape(-1,2)[k]\n",
-    "        center = (int(np.round(pt[0]*16)),int(np.round(pt[1]*16)))\n",
-    "        circle(img,center,10,(255,0,0),5,shift=4)\n",
-    "        putText(img,str(k),(int(center[0]/16)-25, int(center[1]/16)-25),FONT_HERSHEY_SIMPLEX,0.5,(255,0,0),2) \n",
-    "    imwrite('pics/cam1/'+str(imgNumb).zfill(4)+'.jpg',img)\n",
-    "    #print(imgNumb,swap,invalid)\n",
+    "    for j in range(beg,end):\n",
+    "        pts,imgNumb,img,k = df1[j][0:6].reshape(-1,2),int(df1[j][-1]),np.ones((540,960,3))*255,0\n",
+    "        if imgNumb in jump: continue\n",
+    "        for k in range(0,3):\n",
+    "            pt = pts.reshape(-1,2)[k]\n",
+    "            center = (int(np.round(pt[0]*16)),int(np.round(pt[1]*16)))\n",
+    "            circle(img,center,10,(255,0,0),5,shift=4)\n",
+    "            putText(img,str(k),(int(center[0]/16)-25, int(center[1]/16)-25),FONT_HERSHEY_SIMPLEX,0.5,(255,0,0),2) \n",
+    "        imwrite('pics/cam1/'+str(imgNumb).zfill(4)+'.jpg',img)\n",
     "print('Done camera #1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\dbnun\\Downloads\\MoCapRasps\\central\\debug.ipynb Cell 5'\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/dbnun/Downloads/MoCapRasps/central/debug.ipynb#ch0000003?line=2'>3</a>\u001b[0m pts,imgNumb \u001b[39m=\u001b[39m df2[i][\u001b[39m0\u001b[39m:\u001b[39m6\u001b[39m],df2[i][\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/dbnun/Downloads/MoCapRasps/central/debug.ipynb#ch0000003?line=3'>4</a>\u001b[0m \u001b[39m### VERBOSE\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/dbnun/Downloads/MoCapRasps/central/debug.ipynb#ch0000003?line=4'>5</a>\u001b[0m img,k \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mones((\u001b[39m540\u001b[39;49m,\u001b[39m960\u001b[39;49m,\u001b[39m3\u001b[39;49m))\u001b[39m*\u001b[39m\u001b[39m255\u001b[39m,\u001b[39m0\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/dbnun/Downloads/MoCapRasps/central/debug.ipynb#ch0000003?line=5'>6</a>\u001b[0m \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m0\u001b[39m,\u001b[39m3\u001b[39m):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/dbnun/Downloads/MoCapRasps/central/debug.ipynb#ch0000003?line=6'>7</a>\u001b[0m     pt \u001b[39m=\u001b[39m pts\u001b[39m.\u001b[39mreshape(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m,\u001b[39m2\u001b[39m)[k]\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\core\\numeric.py:205\u001b[0m, in \u001b[0;36mones\u001b[1;34m(shape, dtype, order, like)\u001b[0m\n\u001b[0;32m    <a href='file:///c%3A/Users/dbnun/AppData/Local/Packages/PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0/LocalCache/local-packages/Python39/site-packages/numpy/core/numeric.py?line=201'>202</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m _ones_with_like(shape, dtype\u001b[39m=\u001b[39mdtype, order\u001b[39m=\u001b[39morder, like\u001b[39m=\u001b[39mlike)\n\u001b[0;32m    <a href='file:///c%3A/Users/dbnun/AppData/Local/Packages/PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0/LocalCache/local-packages/Python39/site-packages/numpy/core/numeric.py?line=203'>204</a>\u001b[0m a \u001b[39m=\u001b[39m empty(shape, dtype, order)\n\u001b[1;32m--> <a href='file:///c%3A/Users/dbnun/AppData/Local/Packages/PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0/LocalCache/local-packages/Python39/site-packages/numpy/core/numeric.py?line=204'>205</a>\u001b[0m multiarray\u001b[39m.\u001b[39;49mcopyto(a, \u001b[39m1\u001b[39;49m, casting\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39munsafe\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[0;32m    <a href='file:///c%3A/Users/dbnun/AppData/Local/Packages/PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0/LocalCache/local-packages/Python39/site-packages/numpy/core/numeric.py?line=205'>206</a>\u001b[0m \u001b[39mreturn\u001b[39;00m a\n",
-      "File \u001b[1;32m<__array_function__ internals>:5\u001b[0m, in \u001b[0;36mcopyto\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done camera #2\n"
      ]
     }
    ],
    "source": [
-    "os.system('del pics\\cam2\\*jpg*')\n",
+    "os.system('del pics\\cam2\\*jpg')\n",
+    "invalid,lastValid,tol,swap,certainty,counter,lastValid_i=0,0,0.25,0,False,0,0\n",
+    "intervals,valid,jump=[],[],[]\n",
     "for i in range(0,df2.shape[0]):\n",
-    "    pts,imgNumb = df2[i][0:6],df2[i][-1]\n",
+    "    # get points and check invalidity sequence\n",
+    "    pts,imgNumb = df2[i][0:6].reshape(-1,2),int(df2[i][-1])\n",
+    "    if imgNumb>lastValid+1: invalid = imgNumb-lastValid\n",
+    "    # order markers per proximity and check collinearity\n",
+    "    if isCollinear(*pts) and not isEqual(pts) or np.any(pts<0):     \n",
+    "        if invalid>=10 or not counter: \n",
+    "            if not certainty and counter: valid[-1]=False\n",
+    "            prev,certainty = [],False\n",
+    "            intervals.append(i)\n",
+    "            valid.append(True)\n",
+    "        else: prev = np.array(df2[lastValid_i][0:6]).reshape(1,-2)\n",
+    "        pts, _ = orderCenterCoord(pts,prev)\n",
+    "        pts = np.array(pts)\n",
+    "    else: \n",
+    "        jump.append(imgNumb)\n",
+    "        invalid+=1\n",
+    "        continue\n",
+    "    # update internal loop variables\n",
+    "    lastValid,invalid,lastValid_i=imgNumb,0,i\n",
+    "    counter+=1\n",
+    "    df2[i][0:6] = np.copy(pts).reshape(-1,6)\n",
+    "    # check if ABC is in order smaller to largest\n",
+    "    # if 2 consecutive trues, invert all df until interval beginning\n",
+    "    if not certainty:\n",
+    "        for [A,B,C] in pts.reshape([-1, 3, 2]):\n",
+    "            if np.linalg.norm(C-B)/np.linalg.norm(A-B)>(2-tol) and np.linalg.norm(C-B)>20:\n",
+    "                swap += 1\n",
+    "                if swap>5: df2[intervals[-1]:i][0:2],df2[intervals[-1]:i][4:6],swap,certainty = df2[intervals[-1]:i][4:6],df2[intervals[-1]:i][0:2],0,True\n",
+    "            if np.linalg.norm(A-B)/np.linalg.norm(C-B)>(2-tol) and np.linalg.norm(A-B)>20: certainty = True\n",
+    "    #if not i%100: print(i)\n",
+    "intervals.append(i)\n",
+    "\n",
+    "for i in range(0,len(intervals)-1):\n",
+    "    if not valid[i]: continue\n",
+    "    beg,end = intervals[i],intervals[i+1]\n",
     "    ### VERBOSE\n",
-    "    img,k = np.ones((540,960,3))*255,0\n",
-    "    for k in range(0,3):\n",
-    "        pt = pts.reshape(-1,2)[k]\n",
-    "        center = (int(np.round(pt[0]*16)),int(np.round(pt[1]*16)))\n",
-    "        circle(img,center,10,(255,0,0),5,shift=4)\n",
-    "        putText(img,str(k),(int(center[0]/16)-25, int(center[1]/16)-25),FONT_HERSHEY_SIMPLEX,0.5,(255,0,0),2) \n",
-    "    imwrite('pics/cam2/'+str(imgNumb).zfill(4)+'.jpg',img)\n",
-    "    ### VERBOSE\n",
-    "    \n",
+    "    for j in range(beg,end):\n",
+    "        pts,imgNumb,img,k = df2[j][0:6].reshape(-1,2),int(df2[j][-1]),np.ones((540,960,3))*255,0\n",
+    "        if imgNumb in jump: continue\n",
+    "        for k in range(0,3):\n",
+    "            pt = pts.reshape(-1,2)[k]\n",
+    "            center = (int(np.round(pt[0]*16)),int(np.round(pt[1]*16)))\n",
+    "            circle(img,center,10,(255,0,0),5,shift=4)\n",
+    "            putText(img,str(k),(int(center[0]/16)-25, int(center[1]/16)-25),FONT_HERSHEY_SIMPLEX,0.5,(255,0,0),2) \n",
+    "        imwrite('pics/cam2/'+str(imgNumb).zfill(4)+'.jpg',img)\n",
     "print('Done camera #2')"
    ]
   }
