--- a/central/debug.ipynb
+++ b/central/debug.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -37,12 +37,13 @@
     "df1,df2 = np.genfromtxt('cam1.csv', delimiter=','),np.genfromtxt('cam2.csv', delimiter=',')\n",
     "maxTime,maxFrame = max(df1[-1][-2],df2[-1][-2]),max(df1[-1][-1],df2[-1][-1])\n",
     "print('Maximum captured timestamp: '+str(round(maxTime/1e6,2))+' seconds')\n",
-    "print('#'+str(int(maxFrame))+' frames were captured')"
+    "print('#'+str(int(maxFrame))+' frames were captured')\n",
+    "data = [[],[]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +105,7 @@
     }
    ],
    "source": [
-    "os.system('del pics\\cam1\\*jpg')\n",
+    "os.system('rm -rf pics\\cam1\\*jpg')\n",
     "invalid,lastValid,tol,swap,certainty,counter,lastValid_i=0,0,0.25,0,False,0,0\n",
     "intervals,valid,jump=[],[],[]\n",
     "for i in range(0,df1.shape[0]):\n",
@@ -143,10 +144,11 @@
     "for i in range(0,len(intervals)-1):\n",
     "    if not valid[i]: continue\n",
     "    beg,end = intervals[i],intervals[i+1]\n",
-    "    ### VERBOSE\n",
     "    for j in range(beg,end):\n",
     "        pts,imgNumb,img,k = df1[j][0:6].reshape(-1,2),int(df1[j][-1]),np.ones((540,960,3))*255,0\n",
     "        if imgNumb in jump: continue\n",
+    "        data[0].append(np.hstack((pts.reshape(-1),df1[j][-2]/1e6)))\n",
+    "        ### VERBOSE\n",
     "        for k in range(0,3):\n",
     "            pt = pts.reshape(-1,2)[k]\n",
     "            center = (int(np.round(pt[0]*16)),int(np.round(pt[1]*16)))\n",
@@ -158,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +172,7 @@
     }
    ],
    "source": [
-    "os.system('del pics\\cam2\\*jpg')\n",
+    "os.system('rm -rf pics\\cam2\\*jpg')\n",
     "invalid,lastValid,tol,swap,certainty,counter,lastValid_i=0,0,0.25,0,False,0,0\n",
     "intervals,valid,jump=[],[],[]\n",
     "for i in range(0,df2.shape[0]):\n",
@@ -209,10 +211,11 @@
     "for i in range(0,len(intervals)-1):\n",
     "    if not valid[i]: continue\n",
     "    beg,end = intervals[i],intervals[i+1]\n",
-    "    ### VERBOSE\n",
     "    for j in range(beg,end):\n",
     "        pts,imgNumb,img,k = df2[j][0:6].reshape(-1,2),int(df2[j][-1]),np.ones((540,960,3))*255,0\n",
     "        if imgNumb in jump: continue\n",
+    "        data[1].append(np.hstack((pts.reshape(-1),df2[j][-2]/1e6)))\n",
+    "        ### VERBOSE\n",
     "        for k in range(0,3):\n",
     "            pt = pts.reshape(-1,2)[k]\n",
     "            center = (int(np.round(pt[0]*16)),int(np.round(pt[1]*16)))\n",
@@ -221,14 +224,67 @@
     "        imwrite('pics/cam2/'+str(imgNumb).zfill(4)+'.jpg',img)\n",
     "print('Done camera #2')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df,lastInterp,firstInterp = np.zeros((int(120/0.01),2*6+1)),[0,0],[0,0]\n",
+    "df[:,-1] = np.linspace(0,120,int(120/0.01))\n",
+    "\n",
+    "coord,time = np.array(data[0])[:,0:6],np.array(data[0])[:,6]\n",
+    "lowBound,highBound = math.ceil(time[0]/0.01),math.floor(time[-1]/0.01)\n",
+    "tNew = np.linspace(lowBound,highBound,int((highBound-lowBound))+1,dtype=np.uint16)\n",
+    "ff = CubicSpline(time,coord,axis=0)\n",
+    "df[tNew,int(0*6):int(0*6+6)],lastInterp[0],firstInterp[0] = ff(tNew*0.01),tNew[-1],tNew[0]\n",
+    "\n",
+    "coord,time = np.array(data[1])[:,0:6],np.array(data[1])[:,6]\n",
+    "lowBound,highBound = math.ceil(time[0]/0.01),math.floor(time[-1]/0.01)\n",
+    "tNew = np.linspace(lowBound,highBound,int((highBound-lowBound))+1,dtype=np.uint16)\n",
+    "ff = CubicSpline(time,coord,axis=0)\n",
+    "df[tNew,int(1*6):int(1*6+6)],lastInterp[1],firstInterp[1] = ff(tNew*0.01),tNew[-1],tNew[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a,b,hasPrevious,centroids1,centroids2 = np.max(firstInterp),np.min(lastInterp),False,[],[]\n",
+    "pts1,pts2 = np.copy(df[int(a):int(b),int(0*6):int(0*6+6)]),np.copy(df[int(a):int(b),int(1*6):int(1*6+6)])\n",
+    "for i in range(int(b-a)):    \n",
+    "    if not hasPrevious: centroids1,centroids2 = np.copy(pts1[i].reshape(-1,2)),np.copy(pts2[i].reshape(-1,2))\n",
+    "    else: centroids1,centroids2 = np.vstack((centroids1, pts1[i].reshape(-1,2))),np.vstack((centroids2, pts2[i].reshape(-1,2)))\n",
+    "    hasPrevious = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from myLib import estimateFundMatrix_8norm,decomposeEssentialMat\n",
+    "from functions import cameraMatrix_cam1,cameraMatrix_cam2\n",
+    "# get fundamental and essential matrices\n",
+    "F,_ = estimateFundMatrix_8norm(np.array(centroids1),np.array(centroids2))\n",
+    "E = np.matmul(cameraMatrix_cam2.T, np.matmul(F, cameraMatrix_cam1))\n",
+    "print(\"\\nEssenc. Mat.\\n\", E.round(4))\n",
+    "# decompose to rotation and translation between cameras\n",
+    "R, t = decomposeEssentialMat(E, cameraMatrix_cam1, cameraMatrix_cam2, np.array(centroids1), np.array(centroids2))\n",
+    "if np.any(np.isnan(R)): print('no valid rotation matrix')"
+   ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "b387a813f26c1f30376f65ed003917ba8fadeec0d60670d91f0f29041f225819"
+   "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.12 64-bit (windows store)",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -242,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
