add debugOnline nb with correct pojection amtrix, to only global bundle

--- a/central/debugOnline_bundleAdj.ipynb
+++ b/central/debugOnline_bundleAdj.ipynb
@@ -914,6 +914,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "845.0\n",
+      "239.0\n",
+      "203.0\n",
+      "236.0\n",
+      "114.0\n",
+      "275.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'x = np.hstack((cameraParams.ravel(), points3d.ravel()))\\nnCam,points_2d = 2,np.vstack((centroids1,centroids2))\\ncameraIdx = np.hstack((np.zeros(centroids1.shape[0]),np.ones(centroids2.shape[0])))\\npointIdx = np.hstack(([i for i in range(centroids1.shape[0])],[i for i in range(centroids2.shape[0])]))\\nnPts = points3d.shape[0]\\nr = reprojectionError(x,nCam,points_2d,cameraIdx,pointIdx)'"
+      ]
+     },
+     "execution_count": 225,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cameraParams,points3d = [],[]\n",
+    "for i in range(nCameras): \n",
+    "    K = cameraMat[i]\n",
+    "    R,t = rotation[i],translation[i]*scale[i]/100\n",
+    "    if not len(cameraParams): cameraParams=np.hstack((np.array([K[0][0],K[1][1],K[0][2],K[1][2]]).reshape(-1,4),Rodrigues(R)[0].reshape(-1,3),t.reshape(-1,3)))\n",
+    "    else: cameraParams=np.vstack((cameraParams,np.hstack((np.array([K[0][0],K[1][1],K[0][2],K[1][2]]).reshape(-1,4),Rodrigues(R)[0].reshape(-1,3),t.reshape(-1,3)))))\n",
+    "for i in range(len(allIdx)):\n",
+    "    new3dPts = points3D_perPair[i]*scale[i+1]/100\n",
+    "    \n",
+    "'''x = np.hstack((cameraParams.ravel(), points3d.ravel()))\n",
+    "nCam,points_2d = 2,np.vstack((centroids1,centroids2))\n",
+    "cameraIdx = np.hstack((np.zeros(centroids1.shape[0]),np.ones(centroids2.shape[0])))\n",
+    "pointIdx = np.hstack(([i for i in range(centroids1.shape[0])],[i for i in range(centroids2.shape[0])]))\n",
+    "nPts = points3d.shape[0]\n",
+    "r = reprojectionError(x,nCam,points_2d,cameraIdx,pointIdx)'''"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 218,
    "metadata": {},
    "outputs": [
