finally ready to be published

--- a/central/debugOnline.ipynb
+++ b/central/debugOnline.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visual tracking arena calibration and testing \n",
+    "# MoCapRasps arena calibration and testing \n",
     "This notebook is a **visual debug tool** to **calibrate and test extrinsics parameters** of the eROBOTICA visual tracking arena. \n",
     "\n",
     "**IMPORTANT NOTES**\n",
