General rename Fixed #7
The whole structure of the repository was renamed for a more intuitive read.

All the files internals were accordingly renamed to maintain functionality.

--- a/server/debugOnline.ipynb
+++ b/server/debugOnline.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9,7 +10,7 @@
     "\n",
     "**IMPORTANT NOTES**\n",
     "\n",
-    "- The CSV files `camCalib.csv`,`camGround.csv` and `camTest.csv` must be collected via the `serverv2Calib.py`,`serverv2Ground.py` and `serverv2Test.py` codes, respectively (with the `--save` flag). \n",
+    "- The CSV files `camCalib.csv`, `camGround.csv` and `camTest.csv` must be collected via the `calib.py`, `ground.py` and `capture.py` codes, respectively (with the `--save` flag). \n",
     "\n",
     "- Please just change the variables in the noted cells only.\n",
     "\n",
@@ -45,16 +46,17 @@
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "from scipy.interpolate import CubicSpline\n",
     "import os\n",
-    "from itertools import combinations,permutations\n"
+    "from itertools import combinations,permutations"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Calibration of extrinsincs\n",
     "\n",
-    "The following cell sets up the name of the CSV where the data is stored and the size of the arrays to be read. Alter to the values used with the `serverv2Calib.py` code."
+    "The following cell sets up the name of the CSV where the data is stored and the size of the arrays to be read. Alter to the values used with the `calib.py` code."
    ]
   },
   {
@@ -67,7 +69,7 @@
     "### YOU MAY CHANGE THE VARIABLES BELOW ###\n",
     "##########################################\n",
     "\n",
-    "# name (folder/camCalib.csv) where the CSV from serverv2Calib.py is saved\n",
+    "# name (folder/camCalib.csv) where the CSV from calib.py is saved\n",
     "dfCSV = np.genfromtxt('G:/Meu Drive/UFCG/Mestrado/MoCap/CSV datasets/08_17/camCalib_perfect1.csv', delimiter=',')\n",
     "verbose = False # verbose flag for reading the data and interpolation \n",
     "nCameras = 4    # number of cameras\n",
@@ -704,12 +706,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Calibration of ground plane\n",
     "\n",
-    "The following cell sets up the name of the CSV where the data is stored and the size of the arrays to be read. Alter to the values used with the `serverv2Ground.py` code."
+    "The following cell sets up the name of the CSV where the data is stored and the size of the arrays to be read. Alter to the values used with the `ground.py` code."
    ]
   },
   {
@@ -722,7 +725,7 @@
     "### YOU MAY CHANGE THE VARIABLES BELOW ###\n",
     "##########################################\n",
     "\n",
-    "# name (folder/camGround.csv) where the CSV from serverv2Ground.py is saved\n",
+    "# name (folder/camGround.csv) where the CSV from ground.py is saved\n",
     "dfCSV = np.genfromtxt('G:/Meu Drive/UFCG/Mestrado/MoCap/CSV datasets/08_17/camGround3.csv', delimiter=',')"
    ]
   },
@@ -1008,12 +1011,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Testing flight\n",
     "\n",
-    "The following cell sets up the name of the CSV where the data is stored and the size of the arrays to be read. Alter to the values used with the `serverv2Test.py` code."
+    "The following cell sets up the name of the CSV where the data is stored and the size of the arrays to be read. Alter to the values used with the `capture.py` code."
    ]
   },
   {
@@ -1026,7 +1030,7 @@
     "### YOU MAY CHANGE THE VARIABLES BELOW ###\n",
     "##########################################\n",
     "\n",
-    "# name (folder/camTest.csv) where the CSV from serverv2Test.py is saved\n",
+    "# name (folder/camTest.csv) where the CSV from capture.py is saved\n",
     "dfCSV = np.genfromtxt('G:/Meu Drive/UFCG/Mestrado/MoCap/CSV datasets/08_17/camTest_TelloSquare5.csv', delimiter=',')\n",
     "recTime = 60     # recording time, in seconds\n",
     "step = 1/100     # step of the interpolated DF\n",
