Minor documentation updates

--- a/server/debugOnline.ipynb
+++ b/server/debugOnline.ipynb
@@ -895,17 +895,18 @@
     "\n",
     "# name (folder/camTest.csv) where the CSV from capture.py is saved\n",
     "dfCSV = np.genfromtxt('/home/debora/Desktop/MoCapRasp/server/data/camTest.csv', delimiter=',')\n",
-    "recTime = 60     # recording time, in seconds\n",
-    "step = 1/100     # step of the interpolated DF\n",
-    "isDrone = False  # should I realign the point cloud to match the drones X and Y axis\n",
+    "recTime = 60     # Recording time, in seconds\n",
+    "step = 1/100     # Step of the interpolated DF\n",
+    "nMarkers = 4     # Expected number of markers\n",
+    "isDrone = False  # Should I realign the point cloud to match the drones X and Y axis\n",
     "\n",
     "# flags\n",
-    "saveDF = False                 # save dataframe \n",
-    "whichCamera = ''               # save which camera\n",
-    "correctDF = False              # use correction matrices\n",
-    "refineCorrection = False       # refine correction matrices\n",
-    "saveFolder = '/home/debora/Desktop/MoCapRasp/server/data/'  # folder where to save DF\n",
-    "correctionFolder = '/home/debora/Desktop/MoCapRasp/server/data/'   # folder where to catch data to correction amtrices"
+    "saveDF = False                 # Save dataframe \n",
+    "whichCamera = ''               # Save which camera\n",
+    "correctDF = False              # Use correction matrices\n",
+    "refineCorrection = False       # Refine correction matrices\n",
+    "saveFolder = '/home/debora/Desktop/MoCapRasp/server/data/'  # Folder where to save DF\n",
+    "correctionFolder = '/home/debora/Desktop/MoCapRasp/server/data/'   # Folder where to catch data to correction amtrices"
    ]
   },
   {
@@ -1058,8 +1059,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nMarkers = 4\n",
-    "\n",
     "# initiating empty arrays\n",
     "counter,i,lastTime = np.zeros(nCameras,dtype=np.int32),0,np.zeros(nCameras,dtype=np.int32)\n",
     "missed,invalid,swap = np.zeros(nCameras,dtype=np.int32),np.zeros(nCameras,dtype=np.int32),np.zeros(nCameras,dtype=np.int32)\n",
